buildscript {
    repositories {
        mavenLocal()
        jcenter()
        google()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
}
apply plugin: 'java'
apply plugin: 'java-library'
sourceCompatibility = "14"
targetCompatibility = "14"
repositories {
    mavenCentral()
}
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}
dependencies {
    implementation group: 'com.edwardraff', name: 'JSAT', version: '0.0.9'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'com.github.javaparser:javaparser-symbol-solver-core:3.16.1'
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.16.1'
    testImplementation group: 'com.google.googlejavaformat', name: 'google-java-format', version: '1.7'
    println rootProject.getChildProjects().toString()
    implementation rootProject.getChildProjects().get("Desktop")
    testCompile "com.github.o7-Fire.Atomic-Library:Desktop:$atomHash"
    testCompile "com.github.o7-Fire.Atomic-Library:Atomic:$atomHash"
    implementation rootProject
    implementation ("com.github.Anuken.Mindustry:core:$mindustryVersion")
    implementation (Atom("Atomic")){
        exclude group: 'com.javassist'
        because("provided")
    }
}
